# AIAgents

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/code_hygiene_agent/: __init__.py  __main__.py  cli.py
src/code_hygiene_agent/analyzers/: base.py  dead_code.py  registry.py  vulnerability.py
src/code_hygiene_agent/config/: settings.py
src/code_hygiene_agent/integrations/: github.py  repo_manager.py
src/code_hygiene_agent/mcp_server/: server.py  tools.py
src/code_hygiene_agent/reporting/: generator.py
src/code_hygiene_agent/utils/: exceptions.py  logging.py
testing/e2e-tests/real-world-test/: .gitignore  Dockerfile  README.md  code_hygiene_report.md  config.py  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.py
testing/e2e-tests/real-world-test/src/webapp/: app.py  models.py  utils.py
testing/e2e-tests/real-world-test/tests/: __init__.py  test_app.py
tests/integration/: test_end_to_end.py
tests/unit/: test_analyzers.py  test_integrations.py  test_reporting.py
